Fixed logging config, Added QuizID from servicename variable, fixed bug with spaces in answers

--- a/templates/api.yml
+++ b/templates/api.yml
@@ -40,6 +40,8 @@ Globals:
           Fn::ImportValue:
             Fn::Sub:
               ${Stage}-quizdata-leaderboard
+        QUIZ_ID:
+          Ref: ServiceName
   Api:
     EndpointConfiguration: REGIONAL
 
