--- a/.gitignore
+++ b/.gitignore
@@ -227,3 +227,5 @@ $RECYCLE.BIN/
 # End of https://www.gitignore.io/api/osx,linux,python,windows,pycharm,visualstudiocode
 
 /docs/_site/
+/docs/.jekyll-metadata
+/docs/.sass-cache/
