--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,13 +1,3 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-
 # Site settings
 # These are used to personalize your new site. If you look in the HTML files,
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
@@ -19,25 +9,26 @@ description: >- # this means to ignore newlines until "baseurl:"
   PokeQuiz is your Slack teams personal quiz bot for Pokemon!
   PokeQuiz can ask you hundreds of questions and you can even submit your own on Github.
   Compete with your teammates to find out who is the real Pokemon Master!
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: beartime234
-github_username:  beartime234
+baseurl: "" # the subpath of the site
+url: "https://pokequiz.xyz" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: Beartime234
+github_username:  Beartime234
+linkedin_username: josh-eaton
 
 # Build settings
 markdown: kramdown
 theme: minima
-plugins:
-  - jekyll-feed
+
+slack:
+  client_id: 442508869797.446111894053
+  app_id: AD439SA1K
 
 # Exclude from processing.
-# The following items will not be processed, by default. Create a custom list
-# to override the default setting.
-# exclude:
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+exclude:
+ - Gemfile
+ - Gemfile.lock
+ - node_modules
+ - vendor/bundle/
+ - vendor/cache/
+ - vendor/gems/
+ - vendor/ruby/s
