--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,6 +3,8 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
+quiz_name: PokéQuiz
+bot_name: pokequiz
 title: PokéQuiz
 email: beartimeworks@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
@@ -20,7 +22,6 @@ markdown: kramdown
 theme: minima
 
 slack:
-  bot_name: pokequiz
   client_id: 442508869797.446111894053
   app_id: AD439SA1K
 
