Big commit renaming lots of files to increase visibility moved all text to configuration files for easier changes

--- a/.gitignore
+++ b/.gitignore
@@ -205,7 +205,7 @@ Thumbs.db
 ehthumbs.db
 ehthumbs_vista.db
 
-# Folder config file
+# Folder app_config file
 Desktop.ini
 
 # Recycle Bin used on file shares
