Some small fixes

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,14 +3,14 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-quiz_name: PokéQuiz
+quiz_name: PokeQuiz
 bot_name: pokequiz
-title: PokéQuiz
+title: PokeQuiz
 email: beartimeworks@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  PokéQuiz is your Slack teams personal quiz bot for Pokémon!
-  PokéQuiz can ask you hundreds of questions and you can even submit your own on Github.
-  Compete with your team to find out who is the real Pokémon master!
+  PokeQuiz is your Slack teams personal quiz bot for Pokemon!
+  PokeQuiz can ask you hundreds of questions and you can even submit your own on Github.
+  Compete with your team to find out who is the real Pokemon master!
 baseurl: "" # the subpath of the site
 url: "https://pokequiz.xyz" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: Beartime234
