--- a/pokequiz/config/app.yml
+++ b/pokequiz/config/app.yml
@@ -17,7 +17,7 @@ quiz:
     leaderboard:
       header: "*Pokemon Masters*"
       no_answered_questions: |
-        Sorry doesn't Look like your team has answered any questions. Say @pokequiz let's start a quiz to get answering
+        Sorry doesn't look like your team has answered any questions. Say @pokequiz let's start a quiz to get answering
         some questions!
   values:
     leaderboard:
@@ -34,7 +34,7 @@ messaging:
     to view some instructions.
   help_command: |
     Hey ${user_id} :grin: you can mention me along with the word *quiz* to start a quiz e.g. @pokequiz let's start
-    a quiz! You can also mention me along with the word *leaderboard* to view your teams leaderboard e.g. @pokequiz
+    a quiz! You can mention me along with the word *leaderboard* to view your teams leaderboard e.g. @pokequiz
     show me the leaderbaord! You can mention me along with the word *help* to view this message e.g. @pokequiz help me!
     For more information you can view the guide here https://pokequiz.xyz/guide
   correct:
